modified customer section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/19796de735.js" crossorigin="anonymous"></script>
     <!-- RESOURCES FILES-->
+    
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
@@ -181,37 +183,68 @@
                 <h2>What our customers say</h2>
             </div>
             <div class="row">
-                <div id="MyyCarousel" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#MyyCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#MyyCarousel" data-slide-to="1" class="active"></li>
-                        <li data-target="#MyyCarousel" data-slide-to="2" class="active"></li>
-                        <li data-target="#MyyCarousel" data-slide-to="3"></li>
-                    </ol>
-                    <div class="carousel-inner flex" role="listbox">
-                        <div class="col-md-3 carousel-item active customer">
-                            <img src="assets/img/cus1.jpg" alt="customer-img" class="d-block img-fluid mx-auto active">
-                            <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, quis nostrud exer
-                                        tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
+                <div class="owl-carousel owl-theme owl-dots owl-dot button span carousel-item customer flex">
+                    <div class="item">
+                        <div class="customer">
+                            <img src="assets/img/cus1.jpg" alt="img" class="d-block img-fluid mx-auto">
+                            <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, uip exconsequat quis nostrud exer tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
                             <h4><span>Jema Girson</span></h4>
                         </div>
-                        <div class="col-md-3 carousel-item customer active">
-                            <img src="assets/img/cus0.jpg" alt="customer-img" class="d-block img-fluid mx-auto">
-                            <p class="little-description"><cite><q>“ Nam liber tempor cum soluta nobis eleifend
-                                        optioncongue nihil imperdiet doming id quo nostrp ex ea commodo
-                                        consequat.“</q></cite></p>
-                            <h4><span>Johnson Paul</span></h4>
-                        </div>
-                        <div class="col-md-3 carousel-item customer active">
-                            <img src="assets/img/cus2.jpg" alt="customer-img" class="d-bock img-fluid  mx-auto">
-                            <p class="little-description"><cite><q>“ Nam liber tempor cum soluta nobis eleifend option
-                                        congued quo nostrp ex ea commodo consequat. “</q></cite></p>
+                    </div>
+                    <div class="item">
+                        <div class="customer">
+                            <img src="assets/img/cus0.jpg" alt="img" class="d-block img-fluid mx-auto">
+                            <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, uip exconsequat quis nostrud exer tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
                             <h4><span>Jema Girson</span></h4>
                         </div>
-                        <div class="col-md-3 carousel-item customer">
-                            <img src="assets/img/cus3.jpg" alt="customer-img" class="d-bock img-fluid mx-auto">
-                            <p class="little-description"><cite><q>“ Nam liber tempor cum soluta nobis eleifend option
-                                        conguedquo nostrp ex ea commodo consequat. “</q></cite></p>
+                    </div>
+                    <div class="item">
+                        <div class="customer">
+                            <img src="assets/img/cus2.jpg" alt="img" class="d-block img-fluid mx-auto">
+                            <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, uip exconsequat quis nostrud exer tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
+                            <h4><span>Jema Girson</span></h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="customer">
+                            <img src="assets/img/cus3.jpg" alt="img" class="d-block img-fluid mx-auto">
+                            <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, uip exconsequat quis nostrud exer tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
+                            <h4><span>Jema Girson</span></h4>
+                        </div>
+                    </div>
+                   
+                    <div class="item">
+                        <div class="customer">
+                            <img src="assets/img/cus4.jpg" alt="img" class="d-bock img-fluid mx-auto">
+                            <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, uip exconsequat quis nostrud exer tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
+                            <h4><span>Jema Girson</span></h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="customer">
+                            <img src="assets/img/cus5.jpg" alt="img" class="d-block img-fluid mx-auto">
+                            <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, uip exconsequat quis nostrud exer tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
+                            <h4><span>Jema Girson</span></h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="customer">
+                            <img src="assets/img/cus6.jpg" alt="img" class="d-block img-fluid mx-auto">
+                            <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, uip exconsequat quis nostrud exer tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
+                            <h4><span>Jema Girson</span></h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="customer">
+                            <img src="assets/img/cus7.jpg" alt="img" class="d-block img-fluid mx-auto">
+                            <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, uip exconsequat quis nostrud exer tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
+                            <h4><span>Jema Girson</span></h4>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="customer">
+                            <img src="assets/img/cus8.jpg" alt="img" class="d-block img-fluid mx-auto">
+                            <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, uip exconsequat quis nostrud exer tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
                             <h4><span>Jema Girson</span></h4>
                         </div>
                     </div>
@@ -555,6 +588,25 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+        <script src="assets/js/owl.carousel.min.js"></script>
+        <script>
+            $('.owl-carousel').owlCarousel({
+                loop:true,
+                margin:30,
+                nav:false,
+                responsive:{
+                    0:{
+                        items:1
+                    },
+                    600:{
+                        items:2
+                    },
+                    1000:{
+                        items:3
+                    }
+                }
+            })
+        </script>
 </body>
 
 </html>
