--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <div class="row">
                     <div class="col-2 ">
                         <div class="logo-wrapper">
-                            <a href="#" class="navbar-brand main-logo d-block img-fluid"><img src="assets/img/main-logo.png"
-                                    alt="main-logo" class="d-block img-fluid"></a>
+                            <a href="#" class="navbar-brand main-logo d-block img-fluid"><img
+                                    src="assets/img/main-logo.png" alt="main-logo" class="d-block img-fluid"></a>
                         </div>
                     </div>
                     <div class="col-7">
@@ -485,8 +485,8 @@
                 <h2>Our special product offers</h2>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-12 plan-item">
-                    <div class="basic-plan">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="basic-plan  plan-item box">
                         <h5 class="plan5">Basic Plan</h5>
                         <p><span class="value"><sup>$</sup>49</span></p>
                         <p><em>per month</em></p>
@@ -500,8 +500,8 @@
                         <a class="btn btn-md" role="button" href="#">Sign Up Now</a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 plan-item">
-                    <div class="premium-plan">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="premium-plan plan-item box">
                         <h5 class="plan5">premium plan</h5>
                         <p><span class="value"><sup>$</sup>69</span></p>
                         <p><em>per month</em></p>
@@ -515,8 +515,8 @@
                         <a href="#" class="btn  btn-md active" role="button">Sign Up Now</a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 plan-item">
-                    <div class="business-plan">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="business-plan plan-item box">
                         <h5 class="plan5">business plan</h5>
                         <p><span class="value"><sup>$</sup>89</span></p>
                         <p><em>per month</em></p>
@@ -530,8 +530,8 @@
                         <a class="btn btn-md" role="button" href="#">Sign Up Now</a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 plan-item">
-                    <div class="ultimate-plan">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="ultimate-plan plan-item box">
                         <h5 class="plan5">ultimate plan</h5>
                         <p><span class="value"><sup>$</sup>129</span></p>
                         <p><em>per month</em></p>
@@ -558,29 +558,38 @@
             </div>
             <div class="coll">
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-12 coll-item">
-                        <img src="assets/img/coll0.png" class="d-block img-fluid">
-                        <h4>Business Solutions</h4>
-                        <p>Congue nihil imperdiet doming <br><em>option congue nihil.</em></p>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="box coll-item">
+                            <img src="assets/img/coll0.png" class="d-block img-fluid">
+                            <h4>Business Solutions</h4>
+                            <p>Congue nihil imperdiet doming <br><em>option congue nihil.</em></p>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 coll-item">
-                        <img src="assets/img/coll1.png" class="d-block img-fluid">
-                        <h4>Business Solutions</h4>
-                        <p>Congue nihil imperdiet doming<br><em>option congue nihil.</em></p>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="box coll-item">
+                            <img src="assets/img/coll1.png" class="d-block img-fluid">
+                            <h4>Business Solutions</h4>
+                            <p>Congue nihil imperdiet doming<br><em>option congue nihil.</em></p>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 coll-item">
-                        <img src="assets/img/coll2.png" class="d-block img-fluid">
-                        <h4>Business Solutions</h4>
-                        <p>Congue nihil imperdiet doming <br><em>option congue nihil.</em></p>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="box coll-item">
+                            <img src="assets/img/coll2.png" class="d-block img-fluid">
+                            <h4>Business Solutions</h4>
+                            <p>Congue nihil imperdiet doming <br><em>option congue nihil.</em></p>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 coll-item">
-                        <img src="assets/img/coll3.png" class="d-block img-fluid">
-                        <h4>Business Solutions</h4>
-                        <p>Congue nihil imperdiet doming <br><em>option congue nihil.</em></p>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="box coll-item">
+                            <img src="assets/img/coll3.png" class="d-block img-fluid">
+                            <h4>Business Solutions</h4>
+                            <p>Congue nihil imperdiet doming <br><em>option congue nihil.</em></p>
+                        </div>
                     </div>
                 </div>
-                <a class="btn btn-lg mx-auto" role="button" href="#">Get Started Today</a>
             </div>
+            <a class="btn btn-lg mx-auto" role="button" href="#">Get Started Today</a>
+        </div>
         </div>
         </div>
     </section>
